{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 16,
  "lineage": "382f204b-d1fa-1522-1d3d-a09c80dc453c",
  "resources": [
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_lb",
      "name": "nurbolot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:475775181858:loadbalancer/app/Nur-lb/e7472de06704942e",
            "arn_suffix": "app/Nur-lb/e7472de06704942e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Nur-lb-1411368473.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:475775181858:loadbalancer/app/Nur-lb/e7472de06704942e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Nur-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09e61251403c19c0a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0be3339f5fb8ba484"
              },
              {
                "subnet_id": "subnet-0c48fb4fe457af1f8"
              },
              {
                "subnet_id": "subnet-0f234e16777055ebf"
              }
            ],
            "subnets": [
              "subnet-0be3339f5fb8ba484",
              "subnet-0c48fb4fe457af1f8",
              "subnet-0f234e16777055ebf"
            ],
            "vpc_id": "vpc-0cc0719ce553b3583",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.autoscaling.aws_security_group.security",
            "module.vpc-dev.aws_subnet.public_subnets",
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nurbolot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:475775181858:listener/app/Nur-lb/e7472de06704942e/680ae749b95178a0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:475775181858:targetgroup/target/6b13fc9ee532e605",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:475775181858:listener/app/Nur-lb/e7472de06704942e/680ae749b95178a0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:475775181858:loadbalancer/app/Nur-lb/e7472de06704942e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoscaling.aws_lb.nurbolot",
            "module.autoscaling.aws_lb_target_group.target",
            "module.autoscaling.aws_security_group.security",
            "module.vpc-dev.aws_subnet.public_subnets",
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:475775181858:targetgroup/target/6b13fc9ee532e605",
            "arn_suffix": "targetgroup/target/6b13fc9ee532e605",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:475775181858:targetgroup/target/6b13fc9ee532e605",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cc0719ce553b3583"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:475775181858:security-group/sg-09e61251403c19c0a",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e61251403c19c0a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Nur-security-group",
            "name_prefix": "",
            "owner_id": "475775181858",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc0719ce553b3583"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-dev.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:475775181858:internet-gateway/igw-08d16625a56c224a4",
            "id": "igw-08d16625a56c224a4",
            "owner_id": "475775181858",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0cc0719ce553b3583"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:475775181858:route-table/rtb-01e0da93709542c55",
            "id": "rtb-01e0da93709542c55",
            "owner_id": "475775181858",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08d16625a56c224a4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-public-subnets"
            },
            "tags_all": {
              "Name": "dev-route-public-subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc0719ce553b3583"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-dev.aws_internet_gateway.gw",
            "module.vpc-dev.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0feaee8e6cc79e4b4",
            "route_table_id": "rtb-01e0da93709542c55",
            "subnet_id": "subnet-0be3339f5fb8ba484"
          },
          "dependencies": [
            "module.vpc-dev.aws_internet_gateway.gw",
            "module.vpc-dev.aws_route_table.public_subnets",
            "module.vpc-dev.aws_subnet.public_subnets",
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f67ec2d817520be",
            "route_table_id": "rtb-01e0da93709542c55",
            "subnet_id": "subnet-0f234e16777055ebf"
          },
          "dependencies": [
            "module.vpc-dev.aws_internet_gateway.gw",
            "module.vpc-dev.aws_route_table.public_subnets",
            "module.vpc-dev.aws_subnet.public_subnets",
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0caf7489ec347c77f",
            "route_table_id": "rtb-01e0da93709542c55",
            "subnet_id": "subnet-0c48fb4fe457af1f8"
          },
          "dependencies": [
            "module.vpc-dev.aws_internet_gateway.gw",
            "module.vpc-dev.aws_route_table.public_subnets",
            "module.vpc-dev.aws_subnet.public_subnets",
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:475775181858:subnet/subnet-0be3339f5fb8ba484",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be3339f5fb8ba484",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "475775181858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-0"
            },
            "tags_all": {
              "Name": "dev-public-0"
            },
            "vpc_id": "vpc-0cc0719ce553b3583"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:475775181858:subnet/subnet-0f234e16777055ebf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f234e16777055ebf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "475775181858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-1"
            },
            "tags_all": {
              "Name": "dev-public-1"
            },
            "vpc_id": "vpc-0cc0719ce553b3583"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:475775181858:subnet/subnet-0c48fb4fe457af1f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c48fb4fe457af1f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "475775181858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-2"
            },
            "tags_all": {
              "Name": "dev-public-2"
            },
            "vpc_id": "vpc-0cc0719ce553b3583"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.main",
            "module.vpc-dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:475775181858:vpc/vpc-0cc0719ce553b3583",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad7c48171b782ef9",
            "default_route_table_id": "rtb-019cd29d4c74ff243",
            "default_security_group_id": "sg-014a1544740b5e33e",
            "dhcp_options_id": "dopt-0ec417ca2605759e2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cc0719ce553b3583",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-019cd29d4c74ff243",
            "owner_id": "475775181858",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}